<resources>
    <string name="app_name">GithubUser</string>
    <string name="user_name">username</string>
    <string name="search">search</string>
    <string name="id_user">User Id</string>
    <string name="email">Email</string>
    <string name="blog">Blog</string>
    <string name="name">Name</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="repository">Repository</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_language_settings">Change Language</string>
    <string name="Image">Image</string>
    <string name="alarm_setting">Alaram Setting</string>
    <string name="favorite_user">Favorite User</string>
    <string name="alarm">Alarm</string>
</resources>
