<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_user_favorite"
        android:icon="@drawable/ic_fav"
        app:showAsAction="ifRoom"
        android:title="@string/favorite_user" />
    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/ic_settings"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_change_settings"
                android:icon="@drawable/ic_translate"
                android:title="@string/change_language_settings"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_alarm"
                android:icon="@drawable/ic_alarm"
                android:title="@string/alarm_setting"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>